@@ -199,11 +199,6 @@ void h2_session_close(h2_session *session);
 int h2_session_push_enabled(h2_session *session);
 
 /**
- * Look up the stream in this session with the given id.
- */
-struct h2_stream *h2_session_stream_get(h2_session *session, int stream_id);
-
-/**
  * Submit a push promise on the stream and schedule the new steam for
  * processing..
  * 
